{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 24,
  "lineage": "f00b50c2-ec90-7478-9128-68fb6c4ebfab",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.210.209.64",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-21T01:43:09.843-08:00",
            "id": "projects/centryl-erp-123/regions/europe-west1/addresses/my-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "my-static-ip",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "centryl-erp-123",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/regions/europe-west1/addresses/my-static-ip"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-21T01:42:38.347-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/centryl-erp-123/global/firewalls/fw-allow-health-check-and-proxy",
            "log_config": [],
            "name": "fw-allow-health-check-and-proxy",
            "network": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/global/networks/my-network",
            "priority": 1000,
            "project": "centryl-erp-123",
            "self_link": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/global/firewalls/fw-allow-health-check-and-proxy",
            "source_ranges": [
              "11.129.0.0/23",
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "my-cluster"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2026-01-21T01:52:56.063-08:00",
            "id": "projects/centryl-erp-123/regions/europe-west1/forwardingRules/l7-xlb-forwarding-rule-http",
            "ip_address": "projects/centryl-erp-123/regions/europe-west1/addresses/my-static-ip",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "l7-xlb-forwarding-rule-http",
            "network": "projects/centryl-erp-123/global/networks/my-network",
            "network_tier": "STANDARD",
            "port_range": "80",
            "project": "centryl-erp-123",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/beta/projects/centryl-erp-123/regions/europe-west1/forwardingRules/l7-xlb-forwarding-rule-http",
            "target": "projects/centryl-erp-123/regions/europe-west1/targetHttpProxies/l7-xlb-proxy-http"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.default",
            "google_compute_firewall.default",
            "google_compute_network.default",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_target_http_proxy.default",
            "google_compute_region_url_map.default",
            "google_compute_subnetwork.default",
            "google_compute_subnetwork.proxy",
            "google_container_cluster.default",
            "null_resource.delete_ingressgateway",
            "null_resource.gloo",
            "null_resource.local_k8s_context",
            "time_sleep.wait_for_kube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/centryl-erp-123/global/networks/my-network",
            "mtu": 0,
            "name": "my-network",
            "project": "centryl-erp-123",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/global/networks/my-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/zones/europe-west1-b/networkEndpointGroups/ingressgateway",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 3500,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "circuit_breakers": [
              {
                "max_connections": 1024,
                "max_pending_requests": 1024,
                "max_requests": 1024,
                "max_requests_per_connection": 0,
                "max_retries": 10
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2026-01-21T01:51:42.282-08:00",
            "enable_cdn": false,
            "fingerprint": "SI3plDiEbcQ=",
            "health_checks": [
              "projects/centryl-erp-123/regions/europe-west1/healthChecks/l7-xlb-basic-check-http"
            ],
            "id": "projects/centryl-erp-123/regions/europe-west1/backendServices/l7-xlb-backend-service-http",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "l7-xlb-backend-service-http",
            "outlier_detection": [
              {
                "base_ejection_time": [
                  {
                    "nanos": 0,
                    "seconds": 30
                  }
                ],
                "consecutive_errors": 2,
                "consecutive_gateway_failure": 5,
                "enforcing_consecutive_errors": 100,
                "enforcing_consecutive_gateway_failure": 0,
                "enforcing_success_rate": 100,
                "interval": [
                  {
                    "nanos": 0,
                    "seconds": 1
                  }
                ],
                "max_ejection_percent": 50,
                "success_rate_minimum_hosts": 5,
                "success_rate_request_volume": 100,
                "success_rate_stdev_factor": 1900
              }
            ],
            "port_name": "http",
            "project": "centryl-erp-123",
            "protocol": "HTTP",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/regions/europe-west1/backendServices/l7-xlb-backend-service-http",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_firewall.default",
            "google_compute_network.default",
            "google_compute_region_health_check.default",
            "google_compute_subnetwork.default",
            "google_container_cluster.default",
            "null_resource.delete_ingressgateway",
            "null_resource.gloo",
            "null_resource.local_k8s_context",
            "time_sleep.wait_for_kube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-21T01:52:34.051-08:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/regions/europe-west1/backendServices/l7-xlb-backend-service-http",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "ruJj3rX-Iiw=",
            "host_rule": [],
            "id": "projects/centryl-erp-123/regions/europe-west1/urlMaps/regional-l7-xlb-map-http",
            "map_id": 2914682981880504077,
            "name": "regional-l7-xlb-map-http",
            "path_matcher": [
              {
                "default_service": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/regions/europe-west1/backendServices/l7-xlb-backend-service-http",
                "default_url_redirect": [],
                "description": "",
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/"
                    ],
                    "route_action": [
                      {
                        "cors_policy": [],
                        "fault_injection_policy": [],
                        "request_mirror_policy": [],
                        "retry_policy": [
                          {
                            "num_retries": 5,
                            "per_try_timeout": [
                              {
                                "nanos": 0,
                                "seconds": "1"
                              }
                            ],
                            "retry_conditions": [
                              "5xx",
                              "deadline-exceeded",
                              "connect-failure"
                            ]
                          }
                        ],
                        "timeout": [],
                        "url_rewrite": [],
                        "weighted_backend_services": []
                      }
                    ],
                    "service": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/regions/europe-west1/backendServices/l7-xlb-backend-service-http",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "centryl-erp-123",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/regions/europe-west1/urlMaps/regional-l7-xlb-map-http",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_firewall.default",
            "google_compute_network.default",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_subnetwork.default",
            "google_container_cluster.default",
            "null_resource.delete_ingressgateway",
            "null_resource.gloo",
            "null_resource.local_k8s_context",
            "time_sleep.wait_for_kube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-21T01:43:09.791-08:00",
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "NNUY1wvERyA=",
            "host_rule": [],
            "id": "projects/centryl-erp-123/regions/europe-west1/urlMaps/regional-l7-xlb-map-http-redirect",
            "map_id": 2950355395398148418,
            "name": "regional-l7-xlb-map-http-redirect",
            "path_matcher": [],
            "project": "centryl-erp-123",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/regions/europe-west1/urlMaps/regional-l7-xlb-map-http-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-21T01:43:09.968-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/centryl-erp-123/regions/europe-west1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/global/networks/my-network",
            "project": "centryl-erp-123",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/regions/europe-west1/routers/nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "centryl-erp-123/europe-west1/nat-router/router-nat",
            "min_ports_per_vm": 0,
            "name": "router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "centryl-erp-123",
            "region": "europe-west1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.router",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-21T01:42:38.741-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/centryl-erp-123/regions/europe-west1/subnetworks/my-cluster-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "my-cluster-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/global/networks/my-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "centryl-erp-123",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/regions/europe-west1/subnetworks/my-cluster-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-21T01:42:38.807-08:00",
            "gateway_address": "11.129.0.1",
            "id": "projects/centryl-erp-123/regions/europe-west1/subnetworks/proxy-only-subnet",
            "ip_cidr_range": "11.129.0.0/23",
            "name": "proxy-only-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/global/networks/my-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "centryl-erp-123",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "europe-west1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/centryl-erp-123/regions/europe-west1/subnetworks/proxy-only-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    }
  ]
}